Formats session form to have even spacing, fixed width, and larger font size. Also moves View History button into form component and out of the Add Session page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -224,4 +224,52 @@ button:hover {
     margin: 40px 0px;
 }
 
+/* Add Session Form */
+.session-form {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
+}
+
+.session-label {
+    font-size: 1.3rem;
+    margin-bottom: 15px;
+}
+
+input[type="date"], input[type="radio"], textarea {
+    font-size: 1.2rem;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+}
+
+textarea {
+    width: 85%;
+    max-width: 100%;
+    height: 150px;
+}
+
+.form-stages {
+    display: flex;
+    gap: 30px;
+}
+
+.error {
+    background-color: lightcoral;
+    color: black;
+    border-radius: 15px;
+}
+
+.success {
+    background-color: darkseagreen;
+    color: black;
+    border-radius: 15px;
+}
+
+.centered {
+    justify-content: center;
+}
 
